kubernetes/apps/network/traefik/internal/database.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: database
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
spec:
  gatewayClassName: traefik
  listeners:
    - name: postgres
      protocol: TCP
      port: 5432
      allowedRoutes:
        namespaces:
          from: All

    - name: mariadb
      protocol: TCP
      port: 3306
      allowedRoutes:
        namespaces:
          from: All
