kubernetes/apps/network/traefik/internal/external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname "${INTERNAL_DOMAIN}"
spec:
  gatewayClassName: traefik
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      io.cilium/lb-ipam-ips: "${INTERNAL_IP}"
  listeners:
    - name: web
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: websecure
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: le-production-tls
            kind: Secret
