kubernetes/apps/network/traefik/internal/external-ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${EXTERNAL_CNAME}-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: "${EXTERNAL_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: external.${CLUSTER_DOMAIN}
spec:
  entryPoints:
    - websecure
    - traefik
  tls:
    secretName: "le-production-tls"
  routes:
    - kind: Rule
      match: Host('external.${CLUSTER_DOMAIN}')
      middlewares:
        - name: internal-ips
          namespace: network
      services:
        - name: api@external
          kind: TraefikService
