kubernetes/apps/network/traefik/internal/internal-ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${INTERNAL_CNAME}-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: internalig.${CLUSTER_DOMAIN}
spec:
  entryPoints:
    - websecure
    - traefik
  tls:
    secretName: "le-production-tls"
  routes:
    - kind: Rule
      match: Host('internalig.${CLUSTER_DOMAIN}') || Host('${INTERNAL_DOMAIN}')
      middlewares:
        - name: internal-with-errors
          namespace: network
      services:
        - name: api@internal
          kind: TraefikService
